--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16950,3 +16950,103 @@ a.pswp__share--download:hover {
 
 
 /*# sourceMappingURL=style.css.map */
+
+
+  /*
+   * custom Css for Image Button
+   * Require uploads Image Button
+   *
+  */
+
+/*
+.file-upload {
+  background-color: #ffffff;
+  width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+} */
+
+.file-upload-btn {
+  width: 60%;
+  margin: 0;
+  color: #fff;
+  background: #FF6565;
+  border: none;
+  padding: 8px;
+  padding-left: 3px;
+  padding-right: 15px;
+  border-radius: 4px !important;
+  border-bottom: 0px solid #ff6060;
+  transition: all .2s ease;
+  outline: none;
+  text-transform: capitalize;
+  font-weight: 400;
+}
+
+.file-upload-btn:hover {
+  background: #fa6e6e;
+  color: #ffffff;
+  transition: all .2s ease;
+  cursor: pointer;
+}
+
+.file-upload-btn:active {
+  border: 0;
+  transition: all .2s ease;
+}
+
+.file-upload-content {
+  display: none;
+  text-align: left;
+}
+
+.file-upload-input {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.file-upload-image {
+  max-height: 200px;
+  max-width: 200px;
+  margin: auto;
+  padding: 20px;
+  padding-left: 0px;
+  padding-bottom: 0px;
+}
+
+.remove-image {
+  display: none;
+  /* width: 200px;
+  margin: 0;
+  color: #fff;
+  background: #dc3545;
+  border: none;
+  padding: 5px;
+  border-radius: 2px;
+  border-bottom: 4px solid #dc3545;
+  transition: all .2s ease;
+  outline: none;
+  text-transform: uppercase;
+  font-weight: 300; */
+}
+
+/*
+.remove-image:hover {
+  background: #c13b2a;
+  color: #ffffff;
+  transition: all .2s ease;
+  cursor: pointer;
+}
+
+.remove-image:active {
+  border: 0;
+  transition: all .2s ease;
+} */
+
+
