--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2171,7 +2171,10 @@ th:focus {
     font-weight: 500;
     background-color: #fff;
     width: 100%;
+    
 }
+
+
 
 
 /* line 1273, G:/admin_project/8 admin/Analytic/scss/_reset.scss */
@@ -2199,7 +2202,25 @@ th:focus {
 
 .cs_modal .modal-body .form-group {
     margin-bottom: 12px;
+    
 }
+
+.cs_modal .modal-body .form-group .password_with_eye {
+    width: 100%;
+    display: inline-flex;
+    overflow: hidden;
+   
+}
+
+.cs_modal .modal-body .form-group i {
+   
+    position:absolute;
+    margin-left: -40px;
+    margin-top: 17px;
+    
+}
+
+
 
 
 /* line 1285, G:/admin_project/8 admin/Analytic/scss/_reset.scss */
