FrontEnd  | FrontEnd bug fixed 5

--- a/public/assets/frontend/css/main.css
+++ b/public/assets/frontend/css/main.css
@@ -3373,7 +3373,7 @@ table .product-thumbnail img {
 }
 
 .zoomContainer, .zoomWindow {
-  z-index: 9999;
+  /* z-index: 9999; */
 }
 
 .single-product .zoomContainer, .single-product .zoomWindow {
