--- a/public/assets/frontend/invoice/main.css
+++ b/public/assets/frontend/invoice/main.css
@@ -7135,7 +7135,7 @@ h6.post-title {
 
 .header-action-2 .header-action-icon-2 span.lable {
   font-size: 16px;
-  margin: 5px 0 0 10px;
+  margin: 10px 0px 0px 13px;
 }
 
 .header-action-2 .header-action-icon-2:last-child {
