--- a/public/assets/frontend/css/track-oder.css
+++ b/public/assets/frontend/css/track-oder.css
@@ -58,7 +58,7 @@
 span.line {
     height: 5px;
     width: 90px;
-    background-color:#fdc040;
+    background-color:#dddddd;
     display: block;
     position: absolute;
     top: 38%;
@@ -78,12 +78,14 @@ span.line {
 	background-color:#3bb67e;
 } */
 
-.active {
+.active-step {
     background-color:#3bb67e !important;
+    box-shadow: -10px -3px 15px 0px rgb(0 0 0 / 22%), 0px 0px 20px 0px rgb(221 221 221)
 }
 
-.deactivate {
-    background-color:#fdc040;
+.process-step {
+    background-color:#fdc040!important;
+    box-shadow: -10px -3px 15px 0px rgb(0 0 0 / 22%), 0px 0px 20px 0px rgb(221 221 221);
 }
 .content3 p {
 	margin-left:-50%;
@@ -94,7 +96,7 @@ span.line {
 	height:75px;
 	width:75px;
 	border-radius:50%;
-	background-color:#fdc040;
+	background-color:#dddddd;
 	position:relative;
 }
 .imgcircle img {
