--- a/public/assets/frontend/css/chaldal-cart.css
+++ b/public/assets/frontend/css/chaldal-cart.css
@@ -8,10 +8,16 @@
 
 .chaldal {
     position: absolute;
-    left: 83.6% !important;
+    left: 83.2% !important;
     /* top: 48% !important; */
-    top: 27.5% !important;
-    width: 345px !important;
+    top: 27% !important;
+    width: 318px !important;
+}
+.margin-minus {
+    margin-top: -10px;
+}
+.margin-minus20 {
+    margin-top: -20px;
 }
 
 .product-subtitle {
@@ -27,8 +33,8 @@
 .product-name {
     font-weight: 600 !important;
     color: #212529 !important;
-    line-height: 22px !important;
-    margin-bottom: 0.5rem !important;
+    line-height: 14px !important;
+    margin-bottom: 0.4rem !important;
     display: block !important;
     font-size: 12px !important;
     letter-spacing: -0.4px;
@@ -38,7 +44,7 @@
     font-weight: 700 !important;
     margin-top: 0.25rem !important;
     float: left !important;
-    font-size: 18px !important;
+    font-size: 16px !important;
     letter-spacing: 1px;
     color: #3bb77e !important;
 }
@@ -53,10 +59,10 @@
 }
 
 .number .minus {
-    width: 30px;
-    height: 30px;
+    width: 26px;
+    height: 26px;
     font-size: 16px !important;
-    line-height: 30px;
+    line-height: 26px;
     background: #f2f2f2;
     border-radius: 4px;
     text-align: center;
@@ -68,9 +74,9 @@
 }
 
 .number input {
-    height: 30px;
-    width: 30px;
-    line-height: 30px;
+    height: 26px;
+    width: 26px;
+    line-height: 26px;
     margin-bottom: 0;
     text-align: center;
     font-size: 12px;
@@ -84,10 +90,10 @@
 }
 
 .number .plus {
-    width: 30px;
-    height: 30px;
+    width: 26px;
+    height: 26px;
     font-size: 16px;
-    line-height: 30px;
+    line-height: 26px;
     background: #f2f2f2;
     border-radius: 4px;
     font-weight: 500;
@@ -104,12 +110,13 @@
     border: 1px solid #ececec;
     border-radius: 15px;
     box-shadow: 5px 5px 15px rgb(0 0 0 / 5%);
+    background-color: #fff;
 }
 .cart-product-image {
     border-radius: 5px !important;
-    padding-bottom: 0.4rem !important;
-    padding-top: 0.4rem !important;
-    width: 100% !important;
+    padding-bottom: 0.1rem !important;
+    padding-top: 0.1rem !important;
+    width: 80% !important;
     display: inline-block !important;
     background-color: #f5f5f5 !important;
     vertical-align: middle;
@@ -163,7 +170,8 @@
 .cart-cross {
     text-align: end;
     position: relative;
-    top: 25px;
+    top: 16px;
+    z-index: 5;
 }
 .close-cross {
     right: 0px !important;
@@ -205,7 +213,7 @@
 .icon-bar span {
     display: block;
     text-align: center;
-    padding: 11px;
+    padding: 8px;
     transition: all 0.3s ease;
     color: white;
     font-size: 14px;
