Frontend | chalda ,password issue fixed.

--- a/public/assets/frontend/css/chaldal-cart.css
+++ b/public/assets/frontend/css/chaldal-cart.css
@@ -51,7 +51,8 @@
 
 .price-font {
     color: #adb5bd !important;
-    font-size: 10px !important;
+    font-size: 12px !important;
+    text-decoration: line-through;
 }
 
 .cart-count {
